<resources>
    <string name="app_name">Crowd Translate</string>
    <string name="title_activity_browse_projects">BrowseProjectsActivity</string>
    <string name="default_string">default</string>
    <string name="default_project_title">Project Title</string>
    <string name="default_source_language">Source Language</string>
    <string name="default_target_language">Target Language</string>
    <string name="default_sample_text">Sample Text</string>
    <string name="app_title">Crowd Translate</string>
    <string name="browse_projects">Browse Projects</string>
    <string name="translate_screen_title">Translate</string>
    <string name="profile_screen_title">Profile</string>
    <string name="start_project_screen_title">Start a Project</string>
    <string name="label_target_lang">Target Language:</string>
    <string name="label_difficulty">Difficulty:</string>
    <string name="easy_button">Easy</string>
    <string name="medium_button">Medium</string>
    <string name="hard_button">Hard</string>
    <string name="label_tag">Tags:</string>
    <string name="label_source_lang">Source Language:</string>
    <string name="label_project">Project Name:</string>
    <string name="input_text">Text:</string>
    <string name="label_lines">Lines:</string>
    <string name="title_activity_translate">TranslateActivity</string>
    <string name="label_line">Line</string>
    <string name="label_translations">Translations</string>

    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="email_prompt">Email:</string>
    <string name="save_credentials_prompt">Save my login information</string>
    <string name="login_button_text">Login</string>
    <string name="login_new_account_text">Create New Account</string>
    <string name="languages_header">Languages</string>
    <string name="preference_add_language_prompt">+ Add a language...</string>
    <string name="preferences_interests_header">Your Interests</string>
    <string name="preference_add_interest_prompt">+ Add an interest...</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_format_string">Welcome, %s</string>
    <string name="or">or</string>
    <string name="nav_drawer_manage_section">Manage</string>
    <string name="nav_your_projects_button">Your Projects</string>
    <string name="nav_account_button">Account</string>
    <string name="nav_home_button">Home</string>
    <string name="nav_translate_button">Translate</string>
    <string name="nav_start_project_button">Start Project</string>
    <string name="nav_browse_button">Browse Projects</string>
</resources>
