<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home_button" />
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_translate_button" />
        <item
            android:id="@+id/nav_start_project"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_start_project_button" />
        <item
            android:id="@+id/nav_browse_projects"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_browse_button" />
    </group>

    <item android:title="@string/nav_drawer_manage_section">
        <menu>
            <item
                android:id="@+id/nav_your_projects"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_your_projects_button" />
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_account_button" />
        </menu>
    </item>

</menu>
