<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="edu.rosehulman.manc.crowdtranslate.fragment.LandingFragment">

    <TextView
        android:id="@+id/landing_fragment_welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="41dp"
        android:layout_weight="0.31"
        android:src="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/translate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_screen_title" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_screen_title" />

    <Button
        android:id="@+id/start_projects_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_project_screen_title" />

    <Button
        android:id="@+id/browse_projects_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_projects" />
</LinearLayout>