<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/project_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "32sp"
                android:textStyle = "bold"
                android:text="@string/default_project_title" />

            <TextView
                android:id="@+id/project_card_source_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "20sp"
                android:text="@string/default_source_language" />

            <TextView
                android:id="@+id/project_card_target_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "20sp"
                android:text="@string/default_target_language" />

            <TextView
                android:id="@+id/project_card_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "17sp"
                android:text="@string/default_sample_text" />

            <TextView
                android:id="@+id/project_card_sample_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "17sp"
                android:text="@string/default_sample_text" />

        </LinearLayout>
        
    </android.support.v7.widget.CardView>

</LinearLayout>