<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="edu.rosehulman.manc.crowdtranslate.fragment.CreateProjectFragment">


    <!-- Project name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_project"
        android:id="@+id/textView" />

    <View
        style="@style/Divider"
        android:color="#122222"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project_name" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <!-- Source lang -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_source_lang"
        android:id="@+id/textView2" />

    <View
        style="@style/Divider"
        android:color="#122222"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source_language"
        android:dropDownWidth="wrap_content"
        android:scrollIndicators="left"
        android:completionThreshold="1"
        android:dropDownHeight="wrap_content"
        android:elegantTextHeight="true"
        />


    <!-- Dest lang -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_target_lang"
        android:id="@+id/textView3" />

    <View
        style="@style/Divider"
        android:color="#122222"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"

        android:id="@+id/target_language" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <!-- Tags -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tag"
        android:id="@+id/textView5" />

    <View
        style="@style/Divider"
        android:color="#122222"/>

    <MultiAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tags" />


    <!-- Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_text"
        android:id="@+id/textView6" />

    <View
        style="@style/Divider"
        android:color="#122222"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/input_text"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
